[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.4", features = ["serde", "v4"] }

[[bin]]
name = "server"
path = "src/server.rs"
test = false
bench = false

[[bin]]
name = "client"
path = "src/client.rs"
test = false
bench = false