[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.4", features = ["serde", "v4"] }
sha2 = "0.10.2"
base64 = "0.13.0"

[[bin]]
name = "node"
path = "src/main.rs"
test = false
bench = false